force-app/main/default/objects/AI_Prompt_Template__mdt/AI_Prompt_Template__mdt.object-meta.xml
<CustomObject>
    <label>AI Prompt Template</label>
    <pluralLabel>AI Prompt Templates</pluralLabel>
    <description>Configurable prompt templates for AI agent interactions including system prompts and token limits.</description>
</CustomObject>