force-app/main/default/objects/AI_Prompt_Template__mdt/fields/Agent_Type__c.field-meta.xml
<CustomField>
    <fullName>Agent_Type__c</fullName>
    <label>Agent Type</label>
    <type>Text</type>
    <length>100</length>
    <description>Type of AI agent this prompt template is designed for.</description>
</CustomField>