force-app/main/default/objects/AI_Prompt_Template__mdt/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <label>Max Tokens</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <description>Maximum number of tokens allowed in the AI model response.</description>
</CustomField>