force-app/main/default/objects/AI_Prompt_Template__mdt/fields/System_Prompt__c.field-meta.xml
<CustomField>
    <fullName>System_Prompt__c</fullName>
    <label>System Prompt</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>System-level prompt text sent to the AI model for context setting.</description>
</CustomField>