force-app/main/default/objects/AI_Prompt_Template__mdt/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Temperature</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
    <description>Temperature setting for AI model response randomness (0.00-1.00).</description>
</CustomField>