force-app/main/default/objects/AI_Prompt_Template__mdt/fields/User_Prompt_Template__c.field-meta.xml
<CustomField>
    <fullName>User_Prompt_Template__c</fullName>
    <label>User Prompt Template</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>Template for user-level prompts with merge field placeholders.</description>
</CustomField>